--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University website design</title>
     <link rel="stylesheet" href="./index.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
     
 </head>
 <body>
     <section class="header">
         <nav>
             <a href="index.html"><img src="./Assets/logo.png" alt=""></a>
-            <div class="nav-links">
+            <div class="nav-links" id="navLinks">
+           /     <i class="fa fa-times" onclick="hideMenu()"></i>
+                <!-- <i class="fa-solid fa-xmark"></i> -->
+                
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -20,6 +24,7 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
             <h1>World's Biggest University</h1>
@@ -27,5 +32,148 @@
             <a href="" class="hero-btn">Visit Us To Know More</a>
         </div>
     </section>
+
+        <!-- Course section -->
+
+        <section class="course">
+            <h1>Courses We Offer</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, nam.</p>
+            <div class="row">
+                <div class="course-col">
+                    <h3>Intermediate</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, voluptate? 
+                        Magnam, repellendus illum unde nisi culpa quod est harum quo ipsa voluptate!
+                         Porro doloribus nisi quas reiciendis consectetur beatae minima.</p>
+                </div>
+                <div class="course-col">
+                    <h3>Graduation</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, voluptate? 
+                        Magnam, repellendus illum unde nisi culpa quod est harum quo ipsa voluptate!
+                         Porro doloribus nisi quas reiciendis consectetur beatae minima.</p>
+                </div>
+                <div class="course-col">
+                    <h3>Post Graduation</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, voluptate? 
+                        Magnam, repellendus illum unde nisi culpa quod est harum quo ipsa voluptate!
+                         Porro doloribus nisi quas reiciendis consectetur beatae minima.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- campus section -->
+         <section class="campus">
+            <h1>Our Global Campus</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+            <div class="row">
+                <div class="campus-col">
+                    <img src="./Assets/london.png" alt="">
+                    <div class="layer">
+                        <h3>LONDON</h3>
+                    </div>
+                </div>
+                <div class="campus-col">
+                    <img src="./Assets/newyork.png" alt="">
+                    <div class="layer">
+                        <h3>NEW YORK</h3>
+                    </div>
+                </div>
+                <div class="campus-col">
+                    <img src="./Assets/washington.png" alt="">
+                    <div class="layer">
+                        <h3>WASHINGTON</h3>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+         <section class="facilities">
+            <h1>Our Facilities</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <div class="row">
+                <div class="facility-col">
+                    <img src="./Assets/library.png" alt="">
+                    <h3>Word Class Library</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nam hic quae, rerum culpa minima.</p>
+                </div>
+                <div class="facility-col">
+                    <img src="./Assets/basketball.png" alt="">
+                    <h3>Largest PlayGround</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nam hic quae, rerum culpa minima.</p>
+                </div>
+                <div class="facility-col">
+                    <img src="./Assets/cafeteria.png" alt="">
+                    <h3>Tasty And Healthy Food</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nam hic quae, rerum culpa minima.</p>
+                </div>
+            </div>
+         </section>
+
+         <!-- testimonials section -->
+
+         <section class="testimonials">
+            <h1>What our Student Says</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <div class="row">
+                <div class="testimonials-col">
+                    <img src="./Assets/user1.jpg" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Repellat hic earum, unde explicabo </p>
+                        <h3>Charley Barden</h3>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-o"></i>
+                </div>
+                <div class="testimonials-col">
+                    <img src="./Assets/user2.jpg" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Repellat hic earum, unde explicabo</p>
+                        <h3>Divo Barkley</h3>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star-half-o"></i>
+                </div>
+            </div>
+
+         </section>
+
+         <!-- call to action section -->
+          <section class="cta">
+            <h1>Enroll For Our Various Online Courses <br> Anywhere From The Dharti</h1>
+            <a href="" class="hero-btn">CONTACT US</a>
+          </section>
+
+        <!-- footer section -->
+         <section class="footer">
+            <h4>About Us</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ullam consequuntur aspernatur laborum ad reiciendis 
+                aut <br>voluptate placeat optio modi possimus Lorem ipsum dolor sit.</p>
+                <div class="icons">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-twitter"></i>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-linkedin"></i>
+                </div>
+                <p>&copy; 2025 University. All rights reserved.</p>
+
+         </section>
+
+
+            <!-- javascript for  toggle menu -->
+
+    <script>
+        var navLinks=document.getElementById("navLinks");
+        function showMenu(){
+            navLinks.style.right="0";
+        }
+        function hideMenu(){
+            navLinks.style.right="-200px";
+        }
+    </script>
+
 </body>
 </html>
