--- a/course.html
+++ b/course.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html"><img src="./Assets/logo.png" alt=""></a>
             <div class="nav-links" id="navLinks">
@@ -18,23 +18,18 @@
                 
                 <ul>
                     <li><a href="">HOME</a></li>
-                    <li><a href="./About.html">ABOUT</a></li>
-                    <li><a href="./course.html">COURSE</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">COURSE</a></li>
                     <li><a href="">BLOG</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars " id="nav-btn" onclick="showMenu()"></i>
         </nav>
-        <div class="text-box">
-            <h1>World's Biggest University</h1>
-            <p>Making website is now one of the easiest thing in the world. You just need to learn HTML, CSS, <br>Javascript and you are good to go.</p>
-            <a href="" class="hero-btn">Visit Us To Know More</a>
-        </div>
     </section>
 
-        <!-- Course section -->
-
+         <h1 align="center" id="title">Our Courses</h1>
+        <!-- course content -->
         <section class="course">
             <h1>Courses We Offer</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, nam.</p>
@@ -60,34 +55,8 @@
             </div>
         </section>
 
-        <!-- campus section -->
-         <section class="campus">
-            <h1>Our Global Campus</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
-            <div class="row">
-                <div class="campus-col">
-                    <img src="./Assets/london.png" alt="">
-                    <div class="layer">
-                        <h3>LONDON</h3>
-                    </div>
-                </div>
-                <div class="campus-col">
-                    <img src="./Assets/newyork.png" alt="">
-                    <div class="layer">
-                        <h3>NEW YORK</h3>
-                    </div>
-                </div>
-                <div class="campus-col">
-                    <img src="./Assets/washington.png" alt="">
-                    <div class="layer">
-                        <h3>WASHINGTON</h3>
-                    </div>
-                </div>
-            </div>
-         </section>
-<!-- facilities -->
-         <section class="facilities">
+<!-- Facilities -->
+  <section class="facilities">
             <h1>Our Facilities</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             <div class="row">
@@ -109,45 +78,7 @@
             </div>
          </section>
 
-         <!-- testimonials section -->
-
-         <section class="testimonials">
-            <h1>What our Student Says</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            <div class="row">
-                <div class="testimonials-col">
-                    <img src="./Assets/user1.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Repellat hic earum, unde explicabo </p>
-                        <h3>Charley Barden</h3>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-o"></i>
-                </div>
-                <div class="testimonials-col">
-                    <img src="./Assets/user2.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Repellat hic earum, unde explicabo</p>
-                        <h3>Divo Barkley</h3>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star"></i>
-                        <i class="fa fa-star-half-o"></i>
-                </div>
-            </div>
-
-         </section>
-
-         <!-- call to action section -->
-          <section class="cta">
-            <h1>Enroll For Our Various Online Courses <br> Anywhere From The Dharti</h1>
-            <a href="" class="hero-btn">CONTACT US</a>
-          </section>
-
-        <!-- footer section -->
+    <!-- footer section -->
          <section class="footer">
             <h4>About Us</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias ullam consequuntur aspernatur laborum ad reiciendis 
