--- a/contact.html
+++ b/contact.html
@@ -21,28 +21,57 @@
                     <li><a href="./About.html">ABOUT</a></li>
                     <li><a href="./course.html">COURSE</a></li>
                     <li><a href="./Blog.html">BLOG</a></li>
-                    <li><a href="./contact.html">CONTACT</a></li>
+                    <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars " id="nav-btn" onclick="showMenu()"></i>
         </nav>
     </section>
 
-        <h1 align="center" id="title">About Us</h1>
-        <!-- About us content -->
-         <section class="about-us">
+        <h1 align="center" id="title">Contact Us</h1>
+        <!-- Contact Page -->
+        
+        <div class="location">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229085.78865536652!2d78.0260841349969!3d26.214061908156168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3976c5d1792291fb%3A0xff4fb56d65bc3adf!2sGwalior%2C%20Madhya%20Pradesh!5e0!3m2!1sen!2sin!4v1740387836853!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        </div>
+        <div class="contact-us">
             <div class="row">
-                <div class="about-col">
-                    <h1>We are the world's largest University</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas repellat officia nulla totam esse delectus obcaecati perferendis quos eveniet ipsum blanditiis sint repellendus exercitationem, recusandae neque quod maiores inventore consequatur?
-                    Similique exercitationem repudiandae ut cum minus nobis voluptates officia obcaecati incidunt amet blanditiis corporis nesciunt, omnis quisquam fuga aut saepe et tempora sapiente voluptate. Odio, commodi. Maxime deserunt mollitia ipsum.</p>
-                    <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+                <div class="contact-col">
+                    <div>
+                    <i class="fa fa-home"></i>
+                        <span>
+                    <h5>XYZ Road, ABC Building </h5>
+                    <p>Gwalior, Karnatak, India</p>
+                    </span>
+                    
+                    </div>
+                    <div>
+                    <i class="fa fa-phone"></i>
+                        <span>
+                    <h5>+91- 9302750319</h5>
+                    <p>Monday to Saturady, 10AM to 6PM</p>
+                    </span>
+                    </div>
+                    <div>
+                    <i class="fa-solid fa-envelopes"></i>
+                    <span>
+                    <h5>viveksavita@gmail.com</h5>
+                    <p>Gwalior, India</p>
+                    </span>
+                    </div>
                 </div>
-                <div class="about-col">
-                    <img src="./Assets/about.jpg" alt="">
+                <div class="contact-col">
+                    <form action="">
+                        <input type="text" placeholder="Enter your name" required>
+                        <input type="email" placeholder="Enter your email Address" required>
+                        <input type="text" placeholder="Enter your Subject" required>
+                        <textarea name="" id="" rows="10" placeholder="Message" required></textarea>
+                        <button type="submit" class="hero-btn red-btn">Send Message</button>
+                    </form>
                 </div>
             </div>
-         </section>
+        </div>
 
     <!-- footer section -->
          <section class="footer">
