--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <li><a href="">HOME</a></li>
                     <li><a href="./About.html">ABOUT</a></li>
                     <li><a href="./course.html">COURSE</a></li>
-                    <li><a href="">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="./Blog.html">BLOG</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars " id="nav-btn" onclick="showMenu()"></i>
