--- a/Blog.html
+++ b/Blog.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="icon" href="https://pbs.twimg.com/profile_images/1450171770485583877/CA3SewH__200x200.jpg">
+
 </head>
 <body>
     <section class="sub-header">
@@ -28,9 +30,10 @@
         </nav>
     </section>
 
-         <h1 align="center" id="title">Our Certificate & Online Program For 2025</h1>
+         <h1 align="center" id="title">BLOG</h1>
         <!-- Blog page content -->
 
+        <h2 id="blog">Our Certificate & Online Programs For 2025</h2>
             <section class="blog-content">
                 <div class="row">
                     <div class="blog-left">
