--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="icon" href="https://pbs.twimg.com/profile_images/1450171770485583877/CA3SewH__200x200.jpg">
+
+
 </head>
 <body>
     <section class="sub-header">
@@ -28,7 +31,7 @@
         </nav>
     </section>
 
-        <h1 align="center" id="title">Contact Us</h1>
+        <h1 align="center"  id="title">Contact Us</h1>
         <!-- Contact Page -->
         
         <div class="location">
@@ -54,7 +57,7 @@
                     </span>
                     </div>
                     <div>
-                    <i class="fa-solid fa-envelopes"></i>
+                    <i class=" fa fa-solid fa-envelope"></i>
                     <span>
                     <h5>viveksavita@gmail.com</h5>
                     <p>Gwalior, India</p>
