Website is Completed

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                     <li><a href="./About.html">ABOUT</a></li>
                     <li><a href="./course.html">COURSE</a></li>
                     <li><a href="./Blog.html">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars " id="nav-btn" onclick="showMenu()"></i>
@@ -35,8 +35,7 @@
         <!-- Contact Page -->
         
         <div class="location">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229085.78865536652!2d78.0260841349969!3d26.214061908156168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3976c5d1792291fb%3A0xff4fb56d65bc3adf!2sGwalior%2C%20Madhya%20Pradesh!5e0!3m2!1sen!2sin!4v1740387836853!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14325.515417076967!2d85.34385153999642!3d26.151788383738094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39ed1754f10d9aef%3A0x7a3bbfa8b8813b90!2sBairia%2C%20Bihar%20843108!5e0!3m2!1sen!2sin!4v1740466446420!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="contact-us">
             <div class="row">
@@ -88,6 +87,8 @@
                     <i class="fa-brands fa-linkedin-in"></i>
                 </div>
                 <p>&copy; 2025 University. All rights reserved.</p>
+                <p> Created by:-  Supriya, Vivek and Ankit  </p>
+
 
          </section>
 
