--- a/course.html
+++ b/course.html
@@ -93,6 +93,8 @@
                     <i class="fa-brands fa-linkedin-in"></i>
                 </div>
                 <p>&copy; 2025 University. All rights reserved.</p>
+                <p> Created by:-  Supriya, Vivek and Ankit  </p>
+
 
          </section>
 
