--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                     <i class="fa-brands fa-linkedin-in"></i>
                 </div>
                 <p>&copy; 2025 University. All rights reserved.</p>
+                <p> Created by:-  Supriya, Vivek and Ankit  </p>
 
          </section>
 
